# llm-zoomcamp

./: load_data.py  notebook.ipynb  pyproject.toml  rag_helper.py
