[tool.poetry]
name = "llm-zoomcamp"
version = "0.1.0"
description = ""
authors = ["ekaterina.semichasnova <ekaterina.semichasnova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.4"
notebook = "^7.2.1"
openai = "^1.35.3"
elasticsearch = "^8.14.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
